<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_setings">SetingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title">TITLE: </string>
    <string name="date">DATE: </string>
    <string name="url">URL: </string>
    <string name="authors">AUTHORS: </string>
    <string name="location">LOCATION: </string>
    <string name="catagories">CATEGORIES: </string>
    <string name="id">ID: </string>
    <string name="emptyString">//NONE:</string>
    <string name="chosegenerate">CH0OSE THE NUMBER OF SIMULATED NEWS:</string>
    <string name="displayXY">MAP X,Y:</string>
    <string name="displayX">HERE WILL BE X:</string>
    <string name="displayY">HERE WILL BE Y:</string>
    <string name="masege">MESSAGE:</string>
    <string name="loremipsun">But I must explain to you how all this mistaken idea of denouncing of a pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.</string>
    <string name="running">Running</string>
    <string name="disabled">Disabled</string>
    <string name="temp_limit_setting_text">Temperature warning limit</string>
    <string name="deactivate_temp_limit_text">Deactivate</string>
    <string name="activate_temp_limit_text">Activate</string>
    <string name="sensors">Sensors</string>

    <string-array name="menu_items">
        <item>Accident</item>
        <item>Police_seen</item>
        <item>Disaster</item>
    </string-array>

</resources>