<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGenerate"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Vector Image Button on the Left -->
        <ImageButton
            android:id="@+id/btnDisplayBackMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:src="@drawable/baseline_arrow_back_24" />

        <!-- Title in the Middle -->
        <TextView
            android:id="@+id/mainTitlemessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="70dp"
            android:text="MESSAGE"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnDisplayBack"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textViewMapXMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/displayX"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewXYMessage" />

    <TextView
        android:id="@+id/textViewMapYMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/displayY"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMapXMessage" />

    <org.osmdroid.views.MapView
        android:id="@+id/map2"
        tilesource="Mapnik"
        android:layout_width="312dp"
        android:layout_height="214dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMapYMessage"
        app:layout_constraintVertical_bias="0.0"></org.osmdroid.views.MapView>

    <Button
        android:id="@+id/buttonMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="24dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewXYMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/displayXY"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textViewTitleMesage"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarGenerate" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/textViewTitleMesage"
        app:layout_constraintTop_toBottomOf="@+id/toolbarGenerate" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:gravity="center"
        android:text="AUTHOR:"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleMesage" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/textViewAuthor"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:gravity="center"
        android:text="@string/masege"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthor" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="329dp"
        android:layout_height="96dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage">

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your text here..."
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textSize="16sp" />
    </ScrollView>

    <Spinner
        android:id="@+id/editTextSpinerCatagory"
        android:layout_width="149dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/textViewXYMessage"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>